--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.35.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.0"
   },
